<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/top"
    android:orientation="vertical"
    tools:context=".activity.ad.ActAdMain">

    <Button
        android:id="@+id/btn_splash"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/ad_splash"
        android:gravity="center"
        android:textColor="@color/app_mainColor"
        android:textSize="14sp"
        android:theme="@style/PrimaryButton" />
    <Button
        android:id="@+id/btn_banner"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/ad_banner"
        android:gravity="center"
        android:textColor="@color/app_mainColor"
        android:textSize="14sp"
        android:theme="@style/PrimaryButton" />
    <Button
        android:id="@+id/btn_interstitial"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/ad_Interstitial"
        android:gravity="center"
        android:textColor="@color/app_mainColor"
        android:textSize="14sp"
        android:theme="@style/PrimaryButton" />
    <Button
        android:id="@+id/btn_csj_reward"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/ad_csj_reward"
        android:gravity="center"
        android:textColor="@color/app_mainColor"
        android:textSize="14sp"
        android:theme="@style/PrimaryButton" />
    <Button
        android:id="@+id/btn_gdt_reward"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/ad_gdt_reward"
        android:gravity="center"
        android:textColor="@color/app_mainColor"
        android:textSize="14sp"
        android:theme="@style/PrimaryButton" />
    <Button
        android:id="@+id/btn_full_screen_video"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/ad_fullscreen_video"
        android:gravity="center"
        android:textColor="@color/app_mainColor"
        android:textSize="14sp"
        android:theme="@style/PrimaryButton" />
    <Button
        android:id="@+id/btn_stream"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/ad_stream"
        android:gravity="center"
        android:textColor="@color/app_mainColor"
        android:textSize="14sp"
        android:theme="@style/PrimaryButton" />
    <Button
        android:id="@+id/btn_draw_stream"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/ad_draw_stream"
        android:gravity="center"
        android:textColor="@color/app_mainColor"
        android:textSize="14sp"
        android:theme="@style/PrimaryButton" />
    <TextView
        android:id="@+id/tv_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:inputType="textPersonName"
        tools:ignore="TextViewEdits" />

</LinearLayout>